Set permGen size to to maven surefire plugin